@@ -36,5 +36,6 @@ EXPOSE 8080
 ENTRYPOINT ["java", \
   "-XX:+UseContainerSupport", \
   "-XX:MaxRAMPercentage=75.0", \
+  "-XX:+UseZGC", \
   "-Djava.security.egd=file:/dev/./urandom", \
   "-jar", "/app/app.jar"]
